# akv-tui-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  release-plz.toml
.github/workflows/: release-binaries.yml  release.yml  test-ci.yml
assets/: demo.tape
docs/: ARCHITECTURE.md
src/: app.rs  azure.rs  main.rs  model.rs  ui.rs
